0026357: Visualization - Panning zooms view if aspect ratio > 1